# snowleopard-reid

./: .dvcignore  .gitignore  Makefile  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
data/01_raw/locations/: .gitignore  naryn.dvc  sarychat.dvc
data/02_processed/: .gitignore
data/02_processed/config/: naryn.dvc  sarychat.dvc
data/02_processed/cropped/: .gitignore
data/04_models/SAM_HQ/: README.md
data/04_models/yolo/segmentation/: .gitignore
data/05_model_output/: .gitignore
data/07_external/ui/: examples.dvc
data/08_catalog/v1.0/: .gitignore  selection.yaml
scripts/: download_sam_hq_checkpoint.py
scripts/catalog/: build_catalog_from_selection.py  extract_catalog_features.py  generate_catalog_metadata.py  generate_selection_from_catalog.py
scripts/data/: crop_leopard_masks.py  export_fiftyone_selection.py  load_yolo_to_fiftyone.py  parse_review_to_configs.py  reorganize_locations.py  sam_to_yolo.py  split_yolo_dataset.py
scripts/models/: grounding_dino.py  sam_hq.py  train_yolo_segmentation.py
scripts/pipeline/: run.py
scripts/ui/: leopard_catalog_viewer.py  snowleopard_reid_ui.py
src/snowleopard_reid/: __init__.py  utils.py  visualization.py
src/snowleopard_reid/catalog/: __init__.py  loader.py
src/snowleopard_reid/features/: __init__.py  extraction.py
src/snowleopard_reid/images/: __init__.py  processing.py
src/snowleopard_reid/masks/: __init__.py  processing.py
src/snowleopard_reid/pipeline/: __init__.py
src/snowleopard_reid/pipeline/stages/: __init__.py  feature_extraction.py  mask_selection.py  matching.py  (+2 more)
(+2 files in other folders)
