[project]
name = "snowleopard-reid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chouffe", email = "arthur@caillau.me" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
snowleopard-reid = "snowleopard_reid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
