[project]
name = "snowleopard-reid"
version = "0.1.0"
description = "Snow Leopard Identification with Computer Vision"
readme = "README.md"
authors = [
    { name = "Chouffe", email = "arthur@caillau.me" }
]
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "gradio>=5.49.1",
    "matplotlib>=3.8.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "ultralytics>=8.3.78",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "timm>=0.9.0",
    "segment-anything-hq>=0.3.0",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
]

[project.scripts]
snowleopard-reid = "snowleopard_reid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "dvc[s3]>=3.63.0",
    "ruff>=0.14.3",
    "fiftyone>=1.0.0",
]
